<resources>
    <string name="app_name">PayUp</string>
    <!-- Strings related to login -->
    <string name="prompt_name">Nama Lengkap</string>
    <string name="prompt_phone">Nomor Telepon</string>
    <string name="prompt_email">Email/Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_register">Sign Up</string>
    <string name="action_submit">Register</string>
    <string name="welcome">"Welcome, "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>