<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:fitsSystemWindows="true"
        tools:context=".ui.register.RegisterActivity"
        android:background="@drawable/gradient_bg"
        tools:actionBarNavMode="standard">

    <TextView
            android:text="Create Account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="34sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/toolbar3"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="32dp" />

    <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:autofillHints="@string/prompt_name"
            android:hint="@string/prompt_name"
            android:inputType="text"
            android:selectAllOnFocus="true"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="64dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_edittext"
            android:paddingHorizontal="24dp" />

    <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:autofillHints="@string/prompt_email"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_edittext"
            android:paddingHorizontal="24dp" />

    <EditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:autofillHints="@string/prompt_phone"
            android:hint="@string/prompt_phone"
            android:inputType="phone"
            android:selectAllOnFocus="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/rounded_edittext"
            android:paddingHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@+id/username"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" />

    <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/rounded_edittext"
            android:paddingHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@+id/phone"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" />

    <Button
            android:id="@+id/submit"
            android:enabled="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_submit"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="64dp"
            android:textColor="@color/dark_blue"
            android:paddingHorizontal="64dp"
            app:cornerRadius="20dp" />

    <ProgressBar
            android:id="@+id/loading"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

    <androidx.appcompat.widget.Toolbar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>