<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        tools:context=".ui.login.LoginActivity"
        android:foregroundTint="#FFFFFF">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="540dp"
            app:srcCompat="@drawable/image_1"
            android:id="@+id/imageView"
            android:scaleType="fitEnd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
            android:layout_width="280dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/payup_logo_1"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp" />

    <TextView
            android:text="Hello,"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            android:textSize="34sp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/primary_500"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="64dp"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            android:layout_marginTop="154dp" />

    <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_email"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginTop="16dp"
            style="@android:style/Widget.Material.EditText"
            android:background="@drawable/rounded_edittext"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:paddingHorizontal="24dp" />

    <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColorHint="?android:attr/textColorHint"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@+id/username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_edittext"
            android:paddingHorizontal="24dp" />

    <Button
            android:id="@+id/login"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in_short"
            app:layout_constraintTop_toBottomOf="@+id/checkBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            android:paddingHorizontal="64dp"
            app:layout_constraintHorizontal_bias="0.497"
            android:textColor="@color/dark_blue"
            android:textSize="16sp"
            android:textAlignment="center"
            app:cornerRadius="20dp" />

    <Button
            android:id="@+id/register"
            android:enabled="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_register"
            android:textColor="@color/link"
            app:layout_constraintTop_toBottomOf="@+id/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="#00000000"
            android:textSize="16sp" />

    <ProgressBar
            android:id="@+id/loading"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

    <TextView
            android:text="Welcome back to PayUp!"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textColor="@color/ic_launcher_background"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp"
            android:textSize="16sp" />

    <CheckBox
            android:text="Remember Me"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:checked="false"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:buttonTint="@color/ic_launcher_background"
            android:textSize="14sp" />

</androidx.constraintlayout.widget.ConstraintLayout>